[metadata]
name = AsyncioMinimalModbus
version = attr: asynciominimalmodbus.__version__
author = Guy Radford
description = Easy-to-use Modbus RTU and Modbus ASCII implementation for Python
keywords =
    aio
    async
    asyncio
    asynciominimalmodbus
    minimalmodbus
    modbus
    modbus-serial
    modbus-RTU
    modbus-ASCII
license = Apache License, Version 2.0
# Use default value for license_files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guyradford/asynciominimalmodbus
project_urls =
    Bug Tracker = https://github.com/guyradford/asynciominimalmodbus/issues
    Documentation = https://github.com/guyradford/asynciominimalmodbus
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: Manufacturing
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications
    Topic :: Home Automation
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: Terminals :: Serial

[options]
py_modules = asynciominimalmodbus
include_package_data = True
python_requires = >=3.6
install_requires =
    pyserial>=3.0

